# vrcar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml
shader/: plane.vert
vrcar/: __init__.py  __main__.py  common.py  log.py
vrcar/client/: __init__.py  camera.py  controls.py
vrcar/client/provider/: openxr.py  pygame.py
vrcar/client/provider/openxr/: __init__.py  plane.frag
vrcar/server/: __init__.py  camera.py  controls.py  motors.py  pwm.py  servos.py
